- Improve row/column selection modes in wxGrid (joostn).
- Send wxEVT_UPDATE_UI for wxRibbonButtonBar and wxRibbonToolBar (Emilien Kia).
- Add InsertXXXButton() to wxRibbonButtonBar and wxRibbonToolBar (Emilien Kia).
- Allow enabling/disabling and toggling tools in wxRibbonToolBar (Emilien Kia).
- Fix multiple item selection in generic wxTreeCtrl (Igor Korot).
- Implement best size calculation for report mode wxListCtrl.

GTK:

- Fix wxNotebook best size calculation.

MSW:

- Fixed regression with initial focus in the dialogs in 2.9.3.
- Added support for wxEXEC_MAKE_GROUP_LEADER to wxExecute (tteras).
- Set wxMenu being closed in wxEVT_MENU_CLOSE events (Marcin Malich).
- Fix coordinates and Z-position for joystick events (Markus Juergens).
- Fix size of the font returned by wxTextCtrl::GetStyle() (Igor Korot).

OSX:

- Provide native implementations of wxDatePickerCtrl and wxTimePickerCtrl.

Univ:

- Fix regression with read-only wxComboBox appearance (Jason Erb).



2.9.3: (released 2011-12-14)
------

INCOMPATIBLE CHANGES SINCE 2.9.2

- wxPanel::SetBackgroundBitmap() was removed, derive your class from
  wxCustomBackgroundWindow and use its method with the same name instead.

All:

- Fix parsing of negated long options in wxCmdLineParser (roed_bis).
- Fix crash in wxArray::insert() overload taking iterator range (wsu).
- Added wxEventFilter class and wxEvtHandler::{Add,Remove}Filter().
- Added convenient wxCmdLineParser::AddLong{Option,Switch}() wrappers.
- Added wxStopWatch::TimeInMicro() and wxGetUTCTimeUSec() and improved
  wxStopWatch precision.
- Made wxGetLocalTimeMillis() really return local time, added
  wxGetUTCTimeMillis() returning what this function used to return.
- Added wxCriticalSection::TryEnter() (Catalin Raceanu).
- Add support for OpenBSD to wxDialUpManager (brad0).
- Added wxEXEC_HIDE_CONSOLE flag.

All (GUI):

- Added wxWebView library (Steven Lamerton & Auria, GSoC 2011 project).
- Added wxTreeListCtrl class.